# rust_graphql

./: Cargo.toml  README.md  diesel.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  enhancement.md
graphql/: Cargo.toml
graphql/src/: lib.rs
graphql/src/db/: mod.rs  schema.rs
graphql/src/db/users/: mod.rs  repository.rs
graphql/src/resolvers/: mod.rs  root.rs  user.rs
graphql/src/schemas/: mod.rs  root.rs  user.rs
migrations/2022-03-16-092754_users/: up.sql
src/: main.rs
