[package]
name = "rust_graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.0"
actix-rt = "2.6.0"
actix-web = "4.0.1"
anyhow = "1.0.55"
dotenv = "0.15.0"
env_logger = "0.9.0"
graphql = { path = "./graphql" }

[workspace]
members = [
    "graphql",
]
