[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
anyhow = "1.0.55"
async-trait = "0.1.52"
chrono = "0.4.19"
dataloader = "0.14.0"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
juniper = "0.15.9"
juniper_actix = "0.4.0"
log = "0.4.14"
r2d2 = "0.8.9"
